testsuite/tests/typecheck/should_compile/tc168.stderr

tc168.hs:17:1: error:
    Could not deduce (C a1 (a, b0))
    from the context: C a1 (a, b)
      bound by the inferred type for ‘g’: C a1 (a, b) => a1 -> a
      at tc168.hs:17:1-16
    The type variable ‘b0’ is ambiguous
    When checking that ‘g’ has the inferred type
      g :: forall a0 b0 a1. C a1 (a0, b0) => a1 -> a0
    Probable cause: the inferred type is ambiguous
